[package]
name = "rpi-async"
description = "A set of asynchronous streams for GPIO inputs on a Raspberry Pi."
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Mossop/rpi-async"
repository = "https://github.com/Mossop/rpi-async.git"

[dependencies]
rppal = "^0.11.3"
futures = "^0.3.4"
log = "^0.4.8"
tokio = { version = "^0.2.11", features = ["time"] }
